Change text - needs/new

--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -7,7 +7,11 @@
   =semantic_form_for @need, :validate => true, :html => { :class => "form-horizontal" }  do |f|
     =hidden_field_tag :return_to
     =f.inputs do
-      =f.input :category, :label => "I need help with", :help => "Select the most relevant category", :prompt => "Please select...", :required => false, :collection => NeedCategory.select_options, :input_html => {:class => "span5"}
+      -if @need.category.present?
+        %p.mb-2="Ok, so you need help with \"#{@need.category}\"."
+        %p.mb-2 Please give some more description of what help you need.
+      -else
+        =f.input :category, :label => "I need help with", :help => "Select the most relevant category", :prompt => "Please select...", :required => false, :collection => NeedCategory.select_options, :input_html => {:class => "span5"}
       =f.input :description, :label => "Add a description", :help => "Describe what you need help with. Be sure to include when you need the help and how flexible you can be.", :input_html => { :class => "span5", :rows => "6" }, :required => false
       =f.input :need_to_know_by, :as => :radio, :collection => [["Any time","anytime"],["As soon as possible","asap"], ["A specific date", "date"]], :label => "I need to know by", :help => "When would you like to know if anybody can help you?"
       #need_deadline_input.control-group{:class => "#{@need.errors[:deadline].present? ? 'error' : ''}"}
@@ -18,4 +22,4 @@
               =@need.errors[:deadline].to_sentence
     .row
       .span2.offset5
-        =f.commit_button "Send", :button_html => { :class => "btn-primary pull-right" } 
+        =f.commit_button "Send", :button_html => { :class => "btn-primary pull-right" }
