--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -10,21 +10,21 @@
     =li_with_active(@user.current_step == "where_you_live") do
       =link_to "#" do
         %span.tab-number
-          2    
+          2
         Tell us
         %br
-        where you live  
+        where you live
     =li_with_active(@user.current_step == "validate") do
       =link_to "#" do
         %span.tab-number
           3
-        Validate 
+        Validate your
         %br
-        your account
-        
+        membership
+
   =semantic_form_for(@user, :url => registrations_path(:step => @user.next_step || @user.steps.last), :method => :post)  do |form|
-    .tab-content.register-tab-content    
-      .register-tab-pane  
+    .tab-content.register-tab-content
+      .register-tab-pane
         =hidden_field_tag :user_id, @user.id
         =render("registrations/steps/#{@user.current_step}", :form => form)
       .form-actions
