Back and forward through registration, age modal

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  *= require ym_core
  *= require redactor
  *= require ym_cms
- *= require ym_posts 
+ *= require ym_posts
  *= require chosen
  *= require_self
 */
@@ -24,7 +24,7 @@
       opacity: 0;
   }
 }
- 
+
 @-webkit-keyframes fade_in {
   0% {
       opacity: 0;
@@ -52,7 +52,7 @@
 .fade_in.fade_7 {-webkit-animation-delay: 0, 1s;}
 
 .main-nav a  {
-	    
+
      -webkit-transition: .2s ease-in;
      -moz-transition: .2s ease-in;
      transition: .2s ease-in;
@@ -61,7 +61,7 @@
      -webkit-transition: .1s ease-in;
      -moz-transition: .1s ease-in;
      transition: .1s ease-in;
-  
+
 }
 
 .what-help {
@@ -93,7 +93,7 @@
 .shadow {
   -webkit-box-shadow: 1px 2px 1px rgba(0,0,0,0.09), 2px 2px 5px rgba(0,0,0,0.05), 2px 2px 10px rgba(0,0,0,0.04);
 	-moz-box-shadow: 1px 2px 1px rgba(0,0,0,0.09), 2px 2px 5px rgba(0,0,0,0.05), 2px 2px 10px rgba(0,0,0,0.04);
-	box-shadow:1px 1px 1px rgba(0,0,0,0.09), -1px -1px 1px rgba(0,0,0,0.05), 2px 2px 3px rgba(0,0,0,0.04), 2px 2px 8px rgba(0,0,0,0.03);  
+	box-shadow:1px 1px 1px rgba(0,0,0,0.09), -1px -1px 1px rgba(0,0,0,0.05), 2px 2px 3px rgba(0,0,0,0.04), 2px 2px 8px rgba(0,0,0,0.03);
 }
 
 /*========== Forms ==========*/
@@ -131,20 +131,20 @@ h2.home-title, .big-title, .about_page_view #page_title {
 }
 .home-slide-title, .medium-title {
   font-size: 30px;
-  line-height: 30px; 
+  line-height: 30px;
    font-weight: bold;
 }
 .nav ul, .nav-tabs-register li, #site_logo, h2#footer_site_logo, h2, .are-you-title, .block-title, .home-subtitle, .small-title {
 	font-size: 26px;
-	line-height: 28px; 
+	line-height: 28px;
 }
 .normal-title {
   font-size: 16px;
   line-height: 20px;
   -webkit-font-smoothing: antialiased;
   font-weight: normal;
-  margin-bottom: 20px;  	
-  
+  margin-bottom: 20px;
+
 }
 body, p,
 div, input, select, .btn, label, textarea {
@@ -224,7 +224,7 @@ br.clear {
 	position: relative;
 	width: 100%;
 	padding: 6px 0 10px;
-	color: #fff;  
+	color: #fff;
 }
 #hellobar h3 {
 }
@@ -238,14 +238,14 @@ br.clear {
 }
 #headline_image {
 	box-shadow:1px 1px 3px #ccc
-  
+
 }
 #site_logo {
   font-size: 40px;
   line-height: 1;
   float: left;
   margin:0px 0 0 0px;
-  
+
   /*background: url(/assets/logo.png) no-repeat 0 0;*/
 }
 #site_logo a {
@@ -339,13 +339,13 @@ br.clear {
   background: #f5f5f5;
   padding: 20px;
   height: 260px;
-  
+
   box-shadow:inset 0px 1px 10px rgba(0,0,0,0.03);
   -webkit-box-shadow:inset 0px 1px 10px rgba(0,0,0,0.03);
   -moz-box-shadow:inset 0px 1px 10px rgba(0,0,0,0.03);
-  
+
   -webkit-border-radius:3px;
-  -moz-border-radius:3px;  
+  -moz-border-radius:3px;
   border-radius:3px;
 }
 #social_media_links ul li a {
@@ -353,7 +353,7 @@ br.clear {
 	width: 100%;
 	padding: 4px 0;
 	border-bottom: 1px solid #e8e8e8;
-  
+
 }
 .homepage-box-short {
   height: 156px;
@@ -415,7 +415,7 @@ br.clear {
 	clear: left;
 	width: 720px;
 	padding: 30px;
-	margin: -30px 0 15px 70px; 
+	margin: -30px 0 15px 70px;
 	box-shadow:1px 1px 10px rgba(0,0,0,0.1), 1px 1px 1px rgba(0,0,0,0.3);
 }
 .home-help-link {
@@ -428,7 +428,7 @@ br.clear {
 text-decoration: none;
 border-bottom-color: #b08193;
 
-} 
+}
 .what-help-text {
   margin-bottom: 0;
   color: #fff;
@@ -457,7 +457,7 @@ border-bottom-color: #b08193;
   color: #fff;
   border-radius:30px;
   position: absolute;
-  
+
 }
 .intro-circle-icon:hover {
   width: 40px;
@@ -484,32 +484,32 @@ border-bottom-color: #b08193;
 
 #circle1 {
 	top: 160px;
-	left: 267px;  
+	left: 267px;
 }
 #circle2 {
 	top: 140px;
-	left: 467px;  
+	left: 467px;
 }
 #circle3 {
 	top: 190px;
-	left: 647px;  
+	left: 647px;
 }
 #circle4 {
   	top: 220px;
-  	left: 130px;  
+  	left: 130px;
   	background: #cf646d;
   }
 #circle5 {
 	top: 230px;
-	left: 317px;  
+	left: 317px;
 }
 #circle6 {
 	top: 260px;
-	left: 507px;  
+	left: 507px;
 }
 #circle7 {
 	top: 260px;
-	left: 760px;  
+	left: 760px;
 	background: #cf646d;
 }
 #home-map {
@@ -517,22 +517,22 @@ border-bottom-color: #b08193;
 
   padding: 0px;
   height: 320px;
-  
+
   box-shadow:inset 0px 1px 10px rgba(0,0,0,0.03);
   -webkit-box-shadow:inset 0px 1px 10px rgba(0,0,0,0.03);
   -moz-box-shadow:inset 0px 1px 10px rgba(0,0,0,0.03);
-  
+
   -webkit-border-radius:3px;
-  -moz-border-radius:3px;  
-  border-radius:3px;	
-  
+  -moz-border-radius:3px;
+  border-radius:3px;
+
   margin-bottom: 30px;
-  
+
 }
 
 .you-are-in {
 	float: right;
-	margin: -35px 0 0 0; 
+	margin: -35px 0 0 0;
 }
 .you-are-in select {
   margin-left: 10px;
@@ -541,7 +541,7 @@ border-bottom-color: #b08193;
 .list {
   clear: left;
   padding-bottom: 10px;
-  padding-top: 10px;  
+  padding-top: 10px;
   float: left;
   height: 91px;
   overflow: hidden;
@@ -565,7 +565,7 @@ border-bottom-color: #b08193;
   padding: 2px 0;
   width: 100%;
   text-align: center;
-  
+
 }
 .list-image a:hover {
   text-decoration: none;
@@ -574,7 +574,7 @@ border-bottom-color: #b08193;
 	color: #fff;
   text-shadow: none;
   background: #f8bb61;
-  border-color: #f78a1e;  
+  border-color: #f78a1e;
   width: 100%;
   padding: 15px 0;
   font-size: 20px;
@@ -590,7 +590,7 @@ border-bottom-color: #b08193;
   border-top-color: rgba(0, 0, 0, 0.0976563);
   border-right-color: rgba(0, 0, 0, 0.0976563);
   border-bottom-color: rgba(0, 0, 0, 0.246094);
-  border-left-color: rgba(0, 0, 0, 0.0976563);  
+  border-left-color: rgba(0, 0, 0, 0.0976563);
 }
 body#home.logged_in .call-to-action {
   margin-top: 0;
@@ -650,7 +650,7 @@ body#home.logged_out .help-list{
 	float: left;
 	clear: both;
 	margin: 20px 0 0;
-  
+
 }
 
 
@@ -661,13 +661,18 @@ body#home.logged_out .help-list{
 .nav-tabs-register li {
   margin-right: 7px;
 }
-.nav-tabs-register li.active a {
+.nav-tabs-register li.active {
 	color: #619a5f;
+  border: 1px solid #DDD;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  border-bottom-color: white;
 }
 .nav-tabs-register li:last-child {
 	margin-right: 0;
 }
-.nav-tabs-register li a {
+.nav-tabs-register li {
 	width: 226px;
 	font-size: 20px;
 	line-height: 22px;
@@ -689,7 +694,7 @@ span.tab-number {
 }
 li.active span.tab-number {
 	background: #619a5f;
-  
+
 }
 .register-tab-content {
   border: 1px solid #ccc;
@@ -791,7 +796,7 @@ input#user_street_name {
 	font-weight: bold;
 	background: #619a5f;
 	color: #fff;
-  
+
 }
 
 /*========== Footer ==========*/
@@ -810,7 +815,7 @@ html, body {
 }
 .push {
   clear: both;
-  height: 60px;  
+  height: 60px;
 }
 .footer-wrapper {
 	clear: both;
@@ -865,12 +870,12 @@ a.yoomee-logo {
 
 .request-message-text {
 	color: #888;
-  
+
 }
 /*========== request page ==========*/
 #request-activity {
 	padding-top: 40px;
-	
+
 	background: #f6f6f6; /* Old browsers */
 background: -moz-linear-gradient(top,  #f6f6f6 1%, #ffffff 34%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#f6f6f6), color-stop(34%,#ffffff)); /* Chrome,Safari4+ */
@@ -906,7 +911,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   clear: both;
 }
 .request-body {
-  min-height: 140px;  
+  min-height: 140px;
 }
 
 /*========== New offer form ==========*/
@@ -917,7 +922,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 /*========== User thumbnails ==========*/
 .user-thumbnail-large img{
   float:left;
-  
+
 }
 .user-thumbnail-large p{
   float: left;
@@ -1085,8 +1090,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 /* ! Provide higher res assets for iPhone 4   */
 /* ========================================== */
 
-@media only screen and (-webkit-min-device-pixel-ratio: 2) { 
-	
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+
 /*	.logo {
 		background: url(logo2x.jpg) no-repeat;
 		background-size: 212px 303px;
