--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -1,7 +1,6 @@
 %p.mb-3
   =snippet_text(:reg_form_intro)
   =edit_snippet_link(:reg_form_intro)
-=form.hidden_field :current_step, :value => "who_you_are"
 =form.inputs(:class => "form-horizontal") do
   =form.input :first_name, :required => false, :help => "Enter your first name", :input_html => {:placeholder => "e.g. John"}
   =form.input :last_name, :required => false, :input_html => {:placeholder => "e.g. Smith"}, :help => "Enter your family name"
@@ -9,10 +8,15 @@
     %label.control-label Date of Birth
     .controls
       =form.date_select :dob, {:order => [:day, :month, :year], :prompt => true, :start_year => (Time.now.year - 100), :end_year => (Time.now.year)}, :class => "input-medium"
+      =form.hidden_field :undisclosed_age
       %span.help-inline=@user.errors[:dob].try(:first)
       %i.icon.icon-question-sign.help-icon{:title => "Please enter your date of birth. We need to make sure you are a responsible adult"}
+      %p=link_to "Why are we asking for this?", "#why-age", :'data-toggle' => "modal"
   =form.input :gender, :as => :radio, :collection => [["Male","male"], ["Female","female"]]
   =form.input :email, :label => "Email address", :required => false, :help => "Enter the email address you would like to use for logging in again. We promise not share this with others.", :input_html => {:placeholder => "e.g. john@email.com"}
   =form.input :email_confirmation, :label => "Confirm email address", :required => false, :help => "Type your email address again so that we can check there are no typos", :input_html => {:placeholder => "e.g. john@email.com"}
-  =form.input :password, :required => false, :help => "Choose a password that would you like to use to login"
-  =form.input :password_confirmation, :label => "Confirm password", :required => false, :help => "Type the password again so that we can make sure you haven't made a mistake"
+  -if @user.current_step == 'who_you_are'
+    =form.input :password, :required => false, :help => "Choose a password that would you like to use to login"
+    =form.input :password_confirmation, :label => "Confirm password", :required => false, :help => "Type the password again so that we can make sure you haven't made a mistake"
+  -else
+    =form.input :encrypted_password, :as => :hidden
