--- a/app/views/neighbourhoods/_unvalidated_map.html.haml
+++ b/app/views/neighbourhoods/_unvalidated_map.html.haml
@@ -1,15 +1,15 @@
 =content_for :head do
   :javascript
     $(document).ready(function() {
-      
+
     });
     $('.intro-circle-icon').live('click',function(){
       window.location.href = '/needs/' + $(this).data('need-id');
 
     });
     setTimeout(function(){$('.intro-circle-icon').popover({placement:'bottom'})},1000);
-    setTimeout(function(){$('%h3.home-where.home-intro-text').popover({placement:'bottom',   content:'#{escape_javascript(snippet_text(:mission_statement_extra))}#{edit_snippet_link(:mission_statement_extra)}', title:'#{escape_javascript(snippet_text(:mission_statement_extra_title))} #{edit_snippet_link(:mission_statement_extra_title)}'})},1000);
-    
+    setTimeout(function(){$('h3.home-where.home-intro-text').popover({placement:'bottom',   content:'#{escape_javascript(snippet_text(:mission_statement_extra))}#{edit_snippet_link(:mission_statement_extra)}', title:'#{escape_javascript(snippet_text(:mission_statement_extra_title))} #{edit_snippet_link(:mission_statement_extra_title)}'})},1000);
+
 #home-intro.mb-2
   .home-intro-text
     -if current_user && current_user.validated?
@@ -18,7 +18,7 @@
       %h3.home-where.home-intro-text
         =snippet_text(:mission_statement)
         =edit_snippet_link(:mission_statement)
-    -elsif current_user      
+    -elsif current_user
       %h2.home-welcome.home-intro-text
         When you are validated
       %h3.home-where.home-intro-text you will be able to see activity in your neighbourhood
