Add radius to needs and display appropriately

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -371,7 +371,9 @@ br.clear {
   margin-bottom: 30px;
   height: 320px;
 }
-
+#map-canvas.admin-map-canvas {
+  height:640px;
+}
 
 /*========== Flash ==========*/
 
