--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -52,6 +52,7 @@
                   =t(:logout)
         -else
           =link_to "Login", sign_in_path, :class=>"nav-link btn"
+          =link_to "Register", new_registration_path, :class=>"nav-link btn"
 .nav-strip  
   .container                
     .row
