--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -48,4 +48,11 @@
         Enquiries
       %ul.unstyled
         %li=link_to "View enquiries", enquiries_path
+  .span4
+    .well
+      %h2
+        %i.icon-zoom-in
+        Request radius
+      %ul.unstyled
+        %li=link_to "Set maximum request radius", area_radius_maximums_path   
 
