--- a/app/views/neighbourhoods/_validated_map.html.haml
+++ b/app/views/neighbourhoods/_validated_map.html.haml
@@ -1,7 +1,8 @@
 #map-canvas.span12.mb-3
-  .you-are-in
-    %p
-      You are in 
-      %select
-        %option Maltby
-        %option Other areas coming soon!
+  -if false
+    .you-are-in
+      %p
+        You are in 
+        %select
+          %option Maltby
+          %option Other areas coming soon!
