Remove option to logout in modal

--- a/app/views/modals/_not_validated.html.haml
+++ b/app/views/modals/_not_validated.html.haml
@@ -5,5 +5,5 @@
     %p You can't offer help until you've been validated
     %p We'll contact you soon
   .modal-footer
-    =link_to "Log out", sign_out_path, :method => :delete, :class => "btn pull-left"
+    <!-- =link_to "Log out", sign_out_path, :method => :delete, :class => "btn pull-left" -->
     =link_to "Ok", "#", :class => "btn btn-primary", :"data-dismiss" => "modal"
