--- a/app/views/needs/_post.html.haml
+++ b/app/views/needs/_post.html.haml
@@ -11,7 +11,11 @@
         .post-speech=simple_format(post.text)
         .post-actions
           -if offer = @need.offers.where(["offers.user_id = ?", post.user_id]).first
-            -if offer.accepted? && logged_in_as?(@need.user, offer.user)
+            -if logged_in_as?(@need.user, offer.user) && !current_user.validated?
+              .post-action
+                %i.icon-comment-alt
+                You can respond when we have validated your account
+            -elsif offer.accepted? && logged_in_as?(@need.user, offer.user)
               %span.badge.badge-success Accepted
               =link_to reject_offer_path(offer), :class=>"post-action" do
                 %i.icon-remove
@@ -23,4 +27,5 @@
   .comments
     .comment-list
       =render(:partial => "comments/comment", :collection => post.comments)
-    =render("comments/form", :comment => post.comments.build)
+    -if logged_in_as?(@need.user, offer.user) && current_user.validated?  
+      =render("comments/form", :comment => post.comments.build) 
