Change 'Maltby' to 'Sheffield'

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -34,7 +34,7 @@
               %li.divider
               -if current_user.is_community_champion? || current_user.is_admin?
                 %li
-                  =link_to(neighbourhood_posts_path(:neighbourhood => "maltby")) do
+                  =link_to(neighbourhood_posts_path(:neighbourhood => "sheffield")) do
                     %icon.icon-comments-alt
                     Discussion forum  
                 %li.divider
