--- a/app/views/neighbourhoods/_validated_map.html.haml
+++ b/app/views/neighbourhoods/_validated_map.html.haml
@@ -4,5 +4,5 @@
       %p
         You are in 
         %select
-          %option Maltby
+          %option Sheffield
           %option Other areas coming soon!
