--- a/app/views/need_categories/_form.html.haml
+++ b/app/views/need_categories/_form.html.haml
@@ -1,5 +1,6 @@
 =semantic_form_for @need_category do |form|
   =form.inputs do
+    =form.input :parent, :collection => [["None", nil]] + NeedCategory.root.without(@need_category).map{|nc| [nc.name, nc.id]}, :include_blank => false, :label => "Parent category"
     =form.input :name
     =form.input :description, :input_html => {:rows => 4, :class => "span5"}
   =form.buttons
