--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1070,7 +1070,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 /*========== intro page ==========*/
 .header-intro {
   background: #fff;
-  border-bottom: 2px solid #ccc;
+  
   height: 116px;
 }
 .logo-intro {
@@ -1088,21 +1088,90 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   float: left;
   margin: 15px 0 0;
 }
+
+
+@-webkit-keyframes nav_reset {
+  0% {
+      top: -83px;
+  }
+  100% {
+      top: 0;
+  }
+}
+
+@-webkit-keyframes dropdown_nav {
+  0% {
+      opacity: 0;
+  }
+  60% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+.header-intro-fixed {
+  -webkit-animation-name: nav_reset, dropdown_nav;
+  -webkit-animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease-in;
+  -webkit-animation-iteration-count: 1;
+}
+
+
+#header-intro.header-intro-fixed {
+  position: fixed;
+  z-index: 999;
+  top:0;
+  width:100%;
+  height: 70px;
+  background: #fff;
+  box-shadow: 1px 1px 10px rgba(0,0,0,0.3), 1px 1px 4px rgba(0,0,0,0.1);
+}
+.header-intro-fixed .logo-intro-link {
+  background-position: 0 -100px;
+  height: 50px;
+  margin: 7px;
+}.header-intro-fixed .cta-intro {
+  margin-top: 13px;
+}
+.header-intro-fixed .nav {
+  margin-top: 25px;
+}
+
+
+
 .nav-intro {
   float: right;
-  margin: 45px 0 0;
+  margin: 42px 0 0;
 }
 .nav-intro li {
-  float: right;
+  float: left;
   margin: 0 0 0 30px;
 }
 .intro-nav-link {
   color: #999;
+  display: block;
+  text-align: center;
+ 
+}
+a.intro-nav-link-about {
+	width: 55px;
+}
+a.intro-nav-link-how {
+	width: 105px;
+}
+a.intro-nav-link-security {
+	width: 65px;
+	margin-right: 10px;
+}
+.nav a.intro-nav-link:hover {
+	 background: none;
 }
 .cta-intro {
   float: right;
   display: block;
   background: #98cd41;
+
   color: #fff;
   padding: 10px 15px;
   border-radius:3px;
@@ -1122,19 +1191,109 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   width: 100%;
   
 }
+.intro-text p {
+  color: #666;
+}
 .comic-strip {
   float: left;
   width: 100%;
-  padding: 30px 0;
+  padding: 0px 0;
+  height: 380px;
+  position: relative;
+}
+.comic-strip-inner {
+  position: relative;
+}
+.comic-text {
+  position: absolute;
+  width: 300px;
+  top: 100px;
+  right: 10px;
+}
+.comic-text p {
+	font-size: 22px;
+	line-height: 1.3;
+	font-weight: 200;
 }
 #comic-1 {
-  background: #dcd7d3;
+  background: #dcd7d3 url(/assets/comic-1.jpg) no-repeat bottom center;
+} 
+#comic-1 .comic-text {
+  top: 110px;
+}
+#comic-6 .comic-text {
+  top: 80px;
+  width: 280px;
+}
+#comic-2 {
+  background: #fff url(/assets/comic-2.jpg) no-repeat bottom center;
+} 
+#comic-2 .comic-text, #comic-4 .comic-text, #comic-6 .comic-text {
+  right: auto;
+  left: 20px;
+}
+#comic-3 {
+  background: #718ac3 url(/assets/comic-3.jpg) no-repeat bottom center;
+  color: #fff;
+} 
+#comic-4 {
+  background: #fff url(/assets/comic-4.jpg) no-repeat bottom center;
+  
+  
+} 
+#comic-5 {
+  background: #a3cd67 url(/assets/comic-5.jpg) no-repeat bottom center;
+  color: #fff;
+  -webkit-box-shadow: inset 0 2px 7px rgba(0,0,0,0.2);
+  box-shadow: inset 0 2px 7px rgba(0,0,0,0.2);
+} 
+#comic-6 {
+  background: #958b81 url(/assets/comic-6.jpg) no-repeat bottom center;
+  color: #fff;
 } 
 
+.intro-strip {
+  float: left;
+  width: 100%;
+  margin: -40px 0 0;
+  padding: 120px 0 0px;
+  min-height: 300px;
+}
+.intro-strip p {
+  color: #666;
+}
+#how-it-works {
+  background: url(/assets/how-it-works-map.jpg) no-repeat center;
+}
+#security {
+  padding-bottom: 20px;
+  background: url(/assets/security.jpg) no-repeat center 100px;
+  position: relative;
+  z-index: 6;
+}
+#big-cta h2 {
+  text-align: center;
+}
+#big-cta .cta-intro {
+  margin: 0 0 0 59px;
+  width: 200px;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px 50px;
+  float: left;
+  
+}
+#big-cta {
+  height: 400px;
+  float: left;
+  width: 100%;
+}
 
-
-
-
+.header-intro li.active a {
+  color:#000;
+  line-height: 1;
+  font-weight: bold;
+}
 
 
 
